dark mode error fixed

--- a/components/AddMortality/AddMortality.module.css
+++ b/components/AddMortality/AddMortality.module.css
@@ -22,9 +22,10 @@
 .MortalityForm1{
     width:100%;
     margin: 1rem 0;
+    border-radius: 15px;
     background-color:rgb(245, 245, 245) ;
     padding: 2rem 1rem;
-    border-radius: 15px;
+    box-shadow: 1px 1px 15px rgba(0, 0, 0, 0.2);
 }
 
 .MortalityForm input{
